--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<font style="font-size: 12px;">指導老師：王錦裕老師</font><br>
 				<br>
 				<br>
-				<img src="images/mypic.jpg" style="max-width: 95%; height: auto;">
+				<img src="images/mypic.JPG" style="max-width: 95%; height: auto;">
 			</div>
 
 			
